feat: Add endpoint to toggle is paid status
