# cmd/api/docs/swagger.yaml
@@ -47,6 +47,18 @@ definitions:
       id:
         type: string
     type: object
+  expenses.ToggleExpenseIsPaidInput:
+    properties:
+      id:
+        type: string
+    type: object
+  expenses.ToggleExpenseIsPaidOutput:
+    properties:
+      current_is_paid_status:
+        type: boolean
+      id:
+        type: string
+    type: object
   recurrentexpenses.CreateRecurrentExpenseInput:
     properties:
       amount:
@@ -105,6 +117,30 @@ paths:
         "500":
           description: Internal Server Error
       summary: Set expense to paid
+      tags:
+      - expenses
+  /expenses/toggle_is_paid:
+    post:
+      consumes:
+      - application/json
+      description: Toggle is paid status from an expense
+      parameters:
+      - description: ID to toggle is paid status
+        in: body
+        name: expense_id
+        required: true
+        schema:
+          $ref: '#/definitions/expenses.ToggleExpenseIsPaidInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/expenses.ToggleExpenseIsPaidOutput'
+        "500":
+          description: Internal Server Error
+      summary: Toggle is paid status from an expense
       tags:
       - expenses
   /health_check:
